feat: added footer variables

--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -252,6 +252,8 @@ $block: '.#{variables.$ns}aside-header';
         margin: var(--g-spacing-2) 10px;
         display: flex;
         flex-direction: column;
+        background-color: var(--gn-aside-bottom-background-color);
+        border-top: 1px solid var(--gn-aside-bottom-divider-color, transparent);
     }
 
     &__panels {
