--- a/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
@@ -148,13 +148,6 @@ $actionLeftRightMargin: 10px;
     }
 
     &__icon {
-        :global(.#{variables.$ns}composite-bar-highlighted-item) & {
-            color: var(
-                --gn-aside-header-general-item-icon-color,
-                var(--_--item-general-icon-color)
-            );
-        }
-
         // FIXME: fix hack in the next major
         &-tooltip .g-action-tooltip__description {
             color: var(--g-color-text-light-primary);
@@ -171,8 +164,11 @@ $actionLeftRightMargin: 10px;
         height: 100%;
         color: var(--gn-aside-header-item-icon-color, var(--_--item-icon-color));
 
-        :global(.#{variables.$ns}composite-bar_subheader) & {
-            color: var(--gn-aside-top-item-icon-color, var(--_--item-general-icon-color));
+        :global(.#{variables.$ns}composite-bar-highlighted-item) & {
+            color: var(
+                --gn-aside-header-general-item-icon-color,
+                var(--_--item-general-icon-color)
+            );
         }
 
         :global(.#{variables.$ns}composite-bar-highlighted-item) #{$class}_current & {
@@ -182,8 +178,24 @@ $actionLeftRightMargin: 10px;
             );
         }
 
+        :global(.#{variables.$ns}composite-bar_subheader) & {
+            color: var(
+                --gn-aside-top-item-icon-color,
+                var(--gn-aside-header-general-item-icon-color, var(--_--item-general-icon-color))
+            );
+        }
+
         :global(.#{variables.$ns}composite-bar_subheader) #{$class}_current & {
-            color: var(--gn-aside-top-item-current-icon-color, var(--_--item-general-icon-color));
+            color: var(
+                --gn-aside-top-item-current-icon-color,
+                var(
+                    --gn-aside-header-item-current-icon-color,
+                    var(
+                        --gn-aside-header-general-item-icon-color,
+                        var(--_--item-general-icon-color)
+                    )
+                )
+            );
         }
 
         // Footer (Bottom zone) icon color
