--- a/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
@@ -171,7 +171,8 @@ $actionLeftRightMargin: 10px;
             );
         }
 
-        :global(.#{variables.$ns}composite-bar-highlighted-item) #{$class}_current & {
+        :global(.#{variables.$ns}composite-bar-highlighted-item) #{$class}_current &,
+        #{$class}_current & {
             color: var(
                 --gn-aside-header-item-current-icon-color,
                 var(--gn-aside-header-general-item-icon-color, var(--_--item-general-icon-color))
