refactor: replace compact class name to collapsed

--- a/src/components/AsideHeader/components/CollapseButton/CollapseButton.module.scss
+++ b/src/components/AsideHeader/components/CollapseButton/CollapseButton.module.scss
@@ -3,7 +3,7 @@
 $block: '.#{variables.$ns}collapse-button';
 
 #{$block} {
-    &_compact {
+    &_collapsed {
         #{$block}__icon {
             transform: rotate(180deg);
         }
