--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -104,7 +104,7 @@ $block: '.#{variables.$ns}aside-header';
         }
     }
 
-    &_compact &__aside {
+    &_collapsed &__aside {
         background-color: var(
             --gn-aside-header-collapsed-background-color,
             var(--gn-aside-header-background-color, var(--_--background-color))
@@ -198,13 +198,13 @@ $block: '.#{variables.$ns}aside-header';
         }
     }
 
-    &_compact &__header {
+    &_collapsed &__header {
         &::before {
             display: block;
         }
     }
 
-    &_compact &__header_with-decoration {
+    &_collapsed &__header_with-decoration {
         #{$class}__header-divider {
             display: block;
         }
@@ -293,7 +293,7 @@ $block: '.#{variables.$ns}aside-header';
     &__pin-button {
         margin-left: auto;
 
-        &_compact {
+        &_collapsed {
             margin-right: auto;
         }
     }
