--- a/src/components/AsideHeader/components/CompositeBar/CompositeBar.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/CompositeBar.module.scss
@@ -5,12 +5,15 @@ $block: '.#{variables.$ns}composite-bar';
 #{$block} {
     $class: &;
 
+    --gn-aside-header-item-expanded-radius: 6px;
+
     flex: 1 1 auto;
     width: 100%;
     min-height: 40px;
     display: flex;
     flex-direction: column;
-    --gn-aside-header-item-expanded-radius: 6px;
+
+    background-color: var(--gn-aside-main-background-color);
 
     & &__root-menu-item[class] {
         background-color: transparent;
@@ -67,9 +70,18 @@ $block: '.#{variables.$ns}composite-bar';
             width: 100%;
             height: 100%;
             z-index: -1;
-            border-left: 2px solid var(--g-color-line-generic);
+            border-left: 2px solid
+                var(--gn-aside-main-group-border-color, var(--g-color-line-generic));
             border-radius: 0;
             transition: border-radius 0.15s ease-out;
+            background-color: var(--gn-aside-main-group-item-background-color, transparent);
+        }
+
+        &:hover:before {
+            border-color: var(
+                --gn-aside-main-group-border-color-hover,
+                var(--g-color-line-generic)
+            );
         }
     }
 
