--- a/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
@@ -25,6 +25,22 @@ $actionLeftRightMargin: 10px;
     --_--item-selected-text-color: var(--g-color-text-primary);
     --_--item-selected-background-color: var(--g-color-base-selection);
 
+    // Zone-aware background variables (overridden by zone context)
+    // Default values use --gn-aside-header-item-* for root items compatibility
+    --_--zone-bg: transparent;
+    --_--zone-bg-hover: var(
+        --gn-aside-header-item-background-color-hover,
+        var(--_--item-background-color-hover)
+    );
+    --_--zone-current-bg: var(
+        --gn-aside-header-item-current-background-color,
+        var(--_--item-selected-background-color)
+    );
+    --_--zone-current-bg-hover: var(
+        --gn-aside-header-item-current-background-color-hover,
+        var(--_--zone-current-bg)
+    );
+
     display: flex;
     min-width: 0;
     width: 100%;
@@ -33,34 +49,105 @@ $actionLeftRightMargin: 10px;
     cursor: pointer;
     padding: 0;
 
+    // Top zone (subheader) variable overrides
+    :global(.#{variables.$ns}composite-bar_subheader) & {
+        --_--zone-bg: var(--gn-aside-top-item-background-color, transparent);
+        --_--zone-bg-hover: var(
+            --gn-aside-top-item-background-color-hover,
+            var(--_--item-background-color-hover)
+        );
+        --_--zone-current-bg: var(
+            --gn-aside-top-item-current-background-color,
+            var(--_--item-selected-background-color)
+        );
+        --_--zone-current-bg-hover: var(
+            --gn-aside-top-item-current-background-color-hover,
+            var(--_--zone-current-bg)
+        );
+    }
+
+    // Main zone (group items) variable overrides
+    :global(.#{variables.$ns}composite-bar__menu-group_wrapper) & {
+        --_--zone-bg-hover: var(
+            --gn-aside-main-group-item-background-color-hover,
+            var(--_--item-background-color-hover)
+        );
+        --_--zone-current-bg: var(
+            --gn-aside-main-group-item-current-background-color,
+            var(--_--item-selected-background-color)
+        );
+        --_--zone-current-bg-hover: var(
+            --gn-aside-main-group-item-current-background-color-hover,
+            var(--_--zone-current-bg)
+        );
+    }
+
+    // Bottom zone (footer) variable overrides
+    :global(.#{variables.$ns}footer-item) & {
+        --_--zone-bg-hover: var(
+            --gn-aside-bottom-item-background-color-hover,
+            var(--_--item-background-color-hover)
+        );
+        --_--zone-current-bg: var(
+            --gn-aside-bottom-item-current-background-color,
+            var(--_--item-selected-background-color)
+        );
+        --_--zone-current-bg-hover: var(
+            --gn-aside-bottom-item-current-background-color-hover,
+            var(--_--zone-current-bg)
+        );
+    }
+
+    // Mixin for compact mode background
+    @mixin item-bg {
+        position: relative;
+        background-color: transparent;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            z-index: -1;
+            width: var(
+                --gn-aside-header-item-icon-background-size,
+                var(--_--item-icon-background-size)
+            );
+            height: var(
+                --gn-aside-header-item-icon-background-size,
+                var(--_--item-icon-background-size)
+            );
+            margin-top: -18px;
+            margin-left: -18px;
+            border-radius: var(
+                --gn-aside-header-item-collapsed-radius,
+                var(--_--item-collapsed-radius)
+            );
+        }
+    }
+
+    // Background styles - applies to all items (zone variables are overridden by zone context)
+    &#{$class}_type_regular {
+        background-color: var(--_--zone-bg);
+
+        #{$class}__btn-icon {
+            @include item-bg();
+        }
+    }
+
+    &#{$class}_current#{$class}_type_regular {
+        background-color: var(--_--zone-current-bg);
+    }
+
+    &:hover#{$class}_type_regular {
+        background-color: var(--_--zone-current-bg-hover);
+    }
+
+    &:not(#{$class}_current):hover#{$class}_type_regular {
+        background-color: var(--_--zone-bg-hover);
+    }
+
     &__icon {
-        color: var(--gn-aside-header-item-icon-color, var(--_--item-icon-color));
-
-        #{$class}_current & {
-            color: var(
-                --gn-aside-header-item-current-icon-color,
-                var(--gn-aside-header-item-icon-color, var(--_--item-icon-color))
-            );
-        }
-
-        :global(.#{variables.$ns}footer-item) &,
-        :global(.#{variables.$ns}composite-bar-highlighted-item) &,
-        :global(.#{variables.$ns}composite-bar_subheader) & {
-            color: var(
-                --gn-aside-header-general-item-icon-color,
-                var(--_--item-general-icon-color)
-            );
-        }
-
-        :global(.#{variables.$ns}footer-item) #{$class}_current &,
-        :global(.#{variables.$ns}composite-bar-highlighted-item) #{$class}_current &,
-        :global(.#{variables.$ns}composite-bar_subheader) #{$class}_current & {
-            color: var(
-                --gn-aside-header-item-current-icon-color,
-                var(--gn-aside-header-general-item-icon-color, var(--_--item-general-icon-color))
-            );
-        }
-
         // FIXME: fix hack in the next major
         &-tooltip .g-action-tooltip__description {
             color: var(--g-color-text-light-primary);
@@ -75,6 +162,66 @@ $actionLeftRightMargin: 10px;
         align-items: center;
         justify-content: center;
         height: 100%;
+        color: var(--gn-aside-header-item-icon-color, var(--_--item-icon-color));
+
+        #{$class}_current & {
+            color: var(
+                --gn-aside-main-group-item-current-background-color,
+                var(
+                    --gn-aside-header-item-current-icon-color,
+                    var(--gn-aside-header-item-icon-color, var(--_--item-icon-color))
+                )
+            );
+        }
+
+        :global(.#{variables.$ns}composite-bar-highlighted-item) & {
+            color: var(
+                --gn-aside-header-general-item-icon-color,
+                var(--_--item-general-icon-color)
+            );
+        }
+
+        :global(.#{variables.$ns}composite-bar-highlighted-item) #{$class}_current & {
+            color: var(
+                --gn-aside-header-item-current-icon-color,
+                var(--gn-aside-header-general-item-icon-color, var(--_--item-general-icon-color))
+            );
+        }
+
+        :global(.#{variables.$ns}composite-bar_subheader) & {
+            color: var(
+                --gn-aside-top-item-icon-color,
+                var(--gn-aside-header-general-item-icon-color, var(--_--item-general-icon-color))
+            );
+        }
+
+        :global(.#{variables.$ns}composite-bar_subheader) #{$class}_current & {
+            color: var(
+                --gn-aside-top-item-current-icon-color,
+                var(
+                    --gn-aside-header-item-current-icon-color,
+                    var(
+                        --gn-aside-header-general-item-icon-color,
+                        var(--_--item-general-icon-color)
+                    )
+                )
+            );
+        }
+
+        // Footer (Bottom zone) icon color
+        :global(.#{variables.$ns}footer-item) & {
+            color: var(
+                --gn-aside-bottom-item-icon-color,
+                var(--gn-aside-header-general-item-icon-color, var(--_--item-general-icon-color))
+            );
+        }
+
+        :global(.#{variables.$ns}footer-item) #{$class}_current & {
+            color: var(
+                --gn-aside-bottom-item-current-icon-color,
+                var(--gn-aside-header-item-current-icon-color, var(--_--item-general-icon-color))
+            );
+        }
     }
 
     &__title {
@@ -107,6 +254,26 @@ $actionLeftRightMargin: 10px;
         #{$class}_current & {
             color: var(
                 --gn-aside-header-item-current-text-color,
+                var(--_--item-selected-text-color)
+            );
+        }
+
+        :global(.#{variables.$ns}composite-bar_subheader) & {
+            color: var(--gn-aside-top-item-text-color, var(--_--item-text-color));
+        }
+
+        :global(.#{variables.$ns}composite-bar_subheader) #{$class}_current & {
+            color: var(--gn-aside-top-item-current-text-color, var(--_--item-selected-text-color));
+        }
+
+        // Footer (Bottom zone) text color
+        :global(.#{variables.$ns}footer-item) & {
+            color: var(--gn-aside-bottom-item-text-color, var(--_--item-text-color));
+        }
+
+        :global(.#{variables.$ns}footer-item) #{$class}_current & {
+            color: var(
+                --gn-aside-bottom-item-current-text-color,
                 var(--_--item-selected-text-color)
             );
         }
@@ -215,119 +382,12 @@ $actionLeftRightMargin: 10px;
         margin-left: 10px;
     }
 
-    &:not(&_compact) {
-        &#{$class}_current {
-            &#{$class}_type_regular {
-                background-color: var(
-                    --gn-aside-header-item-current-background-color,
-                    var(--_--item-selected-background-color)
-                );
-            }
-        }
-
-        &:hover {
-            &#{$class}_type_regular {
-                background-color: var(
-                    --gn-aside-header-item-current-background-color-hover,
-                    var(
-                        --gn-aside-header-item-current-background-color,
-                        var(--_--item-selected-background-color)
-                    )
-                );
-            }
-        }
-
-        &:not(#{$class}_current):hover {
-            &#{$class}_type_regular {
-                background-color: var(
-                    --gn-aside-header-item-background-color-hover,
-                    var(--_--item-background-color-hover)
-                );
-            }
-        }
-    }
-
     &_compact {
-        @mixin item-bg {
-            position: relative;
-            background-color: transparent;
-
-            &::before {
-                content: '';
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                z-index: -1;
-                width: var(
-                    --gn-aside-header-item-icon-background-size,
-                    var(--_--item-icon-background-size)
-                );
-                height: var(
-                    --gn-aside-header-item-icon-background-size,
-                    var(--_--item-icon-background-size)
-                );
-                margin-top: -18px;
-                margin-left: -18px;
-                border-radius: var(
-                    --gn-aside-header-item-collapsed-radius,
-                    var(--_--item-collapsed-radius)
-                );
-            }
-        }
-
         &#{$class}_type_action {
             width: var(--gn-composite-bar-item-action-size);
 
             & #{$class}__title {
                 margin: 0;
-            }
-        }
-
-        &#{$class}_current {
-            &#{$class}_type_regular {
-                #{$class}__btn-icon {
-                    @include item-bg();
-
-                    &::before {
-                        background-color: var(
-                            --gn-aside-header-item-current-background-color,
-                            var(--_--item-selected-background-color)
-                        );
-                    }
-                }
-            }
-        }
-
-        &:hover {
-            &#{$class}_type_regular {
-                #{$class}__btn-icon {
-                    @include item-bg();
-
-                    &::before {
-                        background-color: var(
-                            --gn-aside-header-item-current-background-color-hover,
-                            var(
-                                --gn-aside-header-item-current-background-color,
-                                var(--_--item-selected-background-color)
-                            )
-                        );
-                    }
-                }
-            }
-        }
-
-        &:not(#{$class}_current):hover {
-            &#{$class}_type_regular {
-                #{$class}__btn-icon {
-                    @include item-bg();
-
-                    &::before {
-                        background-color: var(
-                            --gn-aside-header-item-background-color-hover,
-                            var(--_--item-background-color-hover)
-                        );
-                    }
-                }
             }
         }
     }
