--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -10,7 +10,7 @@ $block: '.#{variables.$ns}aside-header';
     $class: &;
     --gn-aside-header-min-width: 56px;
 
-    --_--item-icon-background-size: 36px;
+    --_--item-height: #{variables.$item-height};
     --_--background-color: var(--g-color-base-background);
     --_--decoration-collapsed-background-color: var(--g-color-base-warning-light);
     --_--decoration-expanded-background-color: var(--g-color-base-warning-light);
@@ -232,11 +232,8 @@ $block: '.#{variables.$ns}aside-header';
     }
 
     &__logo-button &__logo-icon-place {
-        height: var(
-            --gn-aside-header-item-icon-background-size,
-            var(--_--item-icon-background-size)
-        );
-        width: var(--_--item-icon-background-size);
+        height: var(--_--item-height);
+        width: var(--_--item-height);
     }
 
     &__menu-items {
