--- a/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
+++ b/src/components/AsideHeader/components/CompositeBar/Item/Item.module.scss
@@ -10,7 +10,6 @@ $actionLeftRightMargin: 10px;
 
     $class: &;
     --gn-composite-bar-item-action-size: 36px;
-    --_--item-icon-background-size: 36px;
 
     --_--horizontal-divider-line-color: var(--g-color-line-generic);
 
@@ -109,14 +108,8 @@ $actionLeftRightMargin: 10px;
             top: 50%;
             left: 50%;
             z-index: -1;
-            width: var(
-                --gn-aside-header-item-icon-background-size,
-                var(--_--item-icon-background-size)
-            );
-            height: var(
-                --gn-aside-header-item-icon-background-size,
-                var(--_--item-icon-background-size)
-            );
+            width: var(--_--item-height);
+            height: var(--_--item-height);
             margin-top: -18px;
             margin-left: -18px;
             border-radius: var(
@@ -157,7 +150,7 @@ $actionLeftRightMargin: 10px;
 
     &__icon-place {
         flex-shrink: 0;
-        width: var(--_--item-icon-background-size, 36px);
+        width: var(--_--item-height);
         display: flex;
         align-items: center;
         justify-content: center;
