--- a/src/components/AsideHeader/components/FooterItem/FooterItem.module.scss
+++ b/src/components/AsideHeader/components/FooterItem/FooterItem.module.scss
@@ -7,7 +7,7 @@ $block: '.#{variables.$ns}footer-item';
     $class: &;
 
     width: 100%;
-    height: 36px;
+    height: var(--_--item-height);
 
     border-radius: var(--gn-aside-header-item-expanded-radius);
     margin-bottom: 2px;
