--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -11,6 +11,11 @@ $block: '.#{variables.$ns}aside-header';
     --gn-aside-header-min-width: 56px;
 
     --_--item-height: #{variables.$item-height};
+
+    &_compact-mode {
+        // Compact mode styles will be added in subsequent commits
+    }
+
     --_--background-color: var(--g-color-base-background);
     --_--decoration-collapsed-background-color: var(--g-color-base-warning-light);
     --_--decoration-expanded-background-color: var(--g-color-base-warning-light);
