feat(AsideHeader): add compact item height support
- Add ITEM_HEIGHT_COMPACT constant (28px)
- Add --_--item-height CSS variable with compact mode override
- Update getItemHeight and getGroupHeight utilities for isCompactMode
- Apply compact height to menu items, footer items, logo
- Pass isCompactMode to CompositeBar components

--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -13,7 +13,7 @@ $block: '.#{variables.$ns}aside-header';
     --_--item-height: #{variables.$item-height};
 
     &_compact-mode {
-        // Compact mode styles will be added in subsequent commits
+        --_--item-height: #{variables.$item-height-compact};
     }
 
     --_--background-color: var(--g-color-base-background);
