--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -6,7 +6,7 @@ $block: '.#{variables.$ns}logo';
 #{$block} {
     display: flex;
     align-items: center;
-    height: 36px;
+    height: var(--_--item-height, 36px);
 
     &__btn-logo {
         display: flex;
@@ -44,7 +44,7 @@ $block: '.#{variables.$ns}logo';
     }
 
     &__logo-icon-place {
-        width: 36px;
+        width: var(--_--item-height, 36px);
 
         display: flex;
         align-items: center;
