feat(AsideHeader): add compact collapsed width (40px)
- Add ASIDE_HEADER_COMPACT_WIDTH_COMPACT_MODE constant
- Add --gn-aside-header-min-width override for compact mode
- Update PageLayout size calculation for compact mode
- Update CompositeBar mouse event detection
- Update Header divider width

--- a/src/components/AsideHeader/AsideHeader.module.scss
+++ b/src/components/AsideHeader/AsideHeader.module.scss
@@ -8,11 +8,12 @@ $block: '.#{variables.$ns}aside-header';
 
 #{$block} {
     $class: &;
-    --gn-aside-header-min-width: 56px;
+    --gn-aside-header-min-width: #{variables.$aside-header-min-width};
 
     --_--item-height: #{variables.$item-height};
 
     &_compact-mode {
+        --gn-aside-header-min-width: #{variables.$aside-header-min-width-compact};
         --_--item-height: #{variables.$item-height-compact};
     }
 
