--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -1,3 +1,5 @@
 $ns: 'gn-';
 $item-height: 36px;
 $item-height-compact: 28px;
+$aside-header-min-width: 56px;
+$aside-header-min-width-compact: 40px;
